@@ -45,11 +45,16 @@ URLs are concerned.
 This plugin will cause the trailing slashes to be included in the Catalyst
 path.
 
-=head2 EXTENDED METHODS
+=head1 EXTENDED METHODS
 
-=head3 prepare
+=head2 prepare
 
 Sets up $c->{form}
+
+=head2 get_action_path
+
+Overrided from L<Catalyst::Plugin::SanitizeUrl::PrepAction> to do 
+the right thing.
 
 =head1 SEE ALSO
 
